Refactored TempBucketFactory class to several small classes